<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_operators"
            android:icon="@drawable/ic_network_cell_black_24dp"
            android:title="@string/operators" />
        <!--<item-->
            <!--android:id="@+id/nav_settings"-->
            <!--android:icon="@drawable/ic_settings_black_24dp"-->
            <!--android:title="@string/settings" />-->
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_send_black_24dp"
            android:title="@string/send" />
    </group>

    <!--<item android:title="@string/communication">-->
        <!--<menu>-->
            <!---->
        <!--</menu>-->
    <!--</item>-->
    <item android:title="@string/About">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_error_outline_black_24dp"
                android:title="@string/About" />
            <item
                android:id="@+id/nav_donate"
                android:icon="@drawable/ic_redeem_black_24dp"
                android:title="@string/donate" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/help" />

        </menu>
    </item>

</menu>
