<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:GSMCodes="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools">
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        GSMCodes:showAsAction="collapseActionView|always"
        GSMCodes:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/action_sort"
        android:icon="@drawable/ic_filter_list_white_24dp"
        GSMCodes:showAsAction="always"
        android:title="@string/action_sort" />

    <item android:id="@+id/action_create"
        android:icon="@drawable/ic_create_white_24dp"
        GSMCodes:showAsAction="always"
        android:title="@string/action_create" />


    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        GSMCodes:showAsAction="never" />
</menu>