<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <include layout="@layout/content_add_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_this_code_warning"
                android:paddingLeft="@dimen/logo_small_padding"
                android:textSize="@dimen/text_primary"
                android:textColor="@color/from"
                android:textStyle="bold"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp">

            <Button
                android:id="@+id/btn_create_code_dialog_bottom_sheet_ok"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/bg_simple_button_rectangle"
                android:text="@string/dialog_ok"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/btn_create_code_dialog_bottom_sheet_cancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_simple_button_rectangle"
                android:layout_toLeftOf="@+id/btn_create_code_dialog_bottom_sheet_ok"
                android:text="@string/dialog_cancel"
                android:textColor="@color/colorAccent" />

        </RelativeLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>